--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,2 +1,145 @@
 @import "./reset.css";
+*{
+    --background-body-color: black;
+    --font-color:white;
+    --border-color:white;
+    --box-color:rgba(39, 35, 35, 0.986);
+    --img-background:black;
+    --box-shadow:wheat;
+    --author-color:rgb(43, 173, 216);
+    --border-line-color:white;
+}
+  body {
+    background-color: var(--background-body-color);
+  }
 
+  h1{
+    color: var(--font-color);
+    font-size: 31px;
+    font-family: 'Trebuchet MS';
+    border: var(--border-color) 1px solid;
+    margin-left: 40%;
+    margin-top: 2%;
+    padding: 10px;
+    padding-left: 23px;
+    padding-right: 23px;
+    display: inline-block;
+  }
+  
+  .search-container {
+    margin-top: 4%;
+    margin-left: 5%;
+    margin-bottom: 70px;
+  }
+  
+  #search {
+    width: 92%;
+    height: 30px;
+    background-color: var(--background-body-color);
+    font-size: large;
+    padding: 20px;
+    font-size: 30px;
+    color: var(--font-color);
+    border-top: black;
+    border-left: black;
+    border-right: black;
+  }
+  #news-articles {
+    margin-left: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; 
+  }
+  
+  .container {
+    max-width: 265px;
+    border: black 10px solid;
+    height: 530px;
+    padding: 35px;
+    margin-left: 9px;
+    background-color: var(--box-color);
+    margin-bottom: 20px;
+    border-radius: 18px;
+    padding-right: 30px;
+  }
+  
+  .article {
+    list-style-type: none;
+    display: inline;
+  }
+  
+  .container:hover {
+    -webkit-transform: scale(1.03);
+            transform: scale(1.03);
+    -webkit-box-shadow: 0 0 5px var(--box-shadow);
+            box-shadow: 0 0 5px var(--box-shadow);
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+  }
+  
+  .img_area {
+    width: 265px;
+    height: 250px;
+    background-color: var(--img-background);
+  }
+  
+  .article-img {
+    margin-top: 20px;
+    width: 265px;
+    height: 205px; 
+  }
+  
+  .article-title {
+    background: none;
+    font-family: sans-serif;
+    font-size:25px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+  }
+  
+  .article-description {
+    font-size: 20px;
+    color: var(--font-color);
+    background: none;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    font-family: sans-serif;
+  }
+  
+  .article-author {
+    background: none;
+    font-size: 25px;
+    font-family: Trebuchet MS;
+    color: var(--author-color);
+    display: block;
+    text-align: right;
+  }
+  
+  .article-link {
+    color: var(--font-color);
+    text-decoration: none;
+  }
+  
+  .not-found {
+    color: var(--font-color);
+    font-family: sans-serif;
+    font-size: 35px;
+    margin-left: 25px;
+    list-style-type: none;
+  }
+  
+  .load {
+    color: var(--font-color);
+    font-family: sans-serif;
+    font-size: 35px;
+    margin-left: 25px;
+  }
+  
